--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: csharp
 solution: OrderScores.sln
 script:
   - xbuild /p:Configuration=Release OrderScores.sln
-  - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./TestScoreSorter/bin/Release/TestScoreSorter.dll
+  - nunit-console ./TestScoreSorter/bin/Release/TestScoreSorter.dll
