Fiddling with post build events...

--- a/OrderScores/OrderScores.csproj
+++ b/OrderScores/OrderScores.csproj
@@ -68,7 +68,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release-Mono|AnyCPU'">
     <PostBuildEvent>cp $(SolutionDir)scores.txt $(TargetDir)
-	"$(TargetPath)" scores.txt</PostBuildEvent>
+	mono "$(TargetPath)" scores.txt</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <PostBuildEvent>copy "$(SolutionDir)"scores.txt "$(TargetDir)"</PostBuildEvent>
