Output the conent of the graded tests to build output

--- a/OrderScores/OrderScores.csproj
+++ b/OrderScores/OrderScores.csproj
@@ -68,7 +68,8 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release-Mono|AnyCPU'">
     <PostBuildEvent>cp $(SolutionDir)scores.txt $(TargetDir)
-	mono "$(TargetPath)" scores.txt</PostBuildEvent>
+	mono $(TargetPath) scores.txt
+	cat $(TargetDir)scores-graded.txt</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <PostBuildEvent>copy "$(SolutionDir)"scores.txt "$(TargetDir)"</PostBuildEvent>
